--- a/app/src/main/res/layout/add_task_tag_list_item.xml
+++ b/app/src/main/res/layout/add_task_tag_list_item.xml
@@ -56,7 +56,6 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <LinearLayout
-                android:id="@+id/tagandtaskholder"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
@@ -66,7 +65,7 @@
                     android:id="@+id/checklistEncloser"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight=".5"
                     android:orientation="vertical"
                     android:paddingStart="4dp"
                     app:layout_constraintTop_toBottomOf="@+id/listTextView"
@@ -103,8 +102,7 @@
                     android:id="@+id/tagOnTaskLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginRight="16dp"
-                    android:layout_weight="2"
+                    android:layout_weight=".5"
                     android:orientation="vertical"
                     android:paddingStart="8dp"
                     android:paddingTop="4dp"
@@ -117,7 +115,6 @@
                         layout="@layout/inbox_tag_list_item"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
                         android:layout_weight="0" />
 
                     <include
@@ -125,7 +122,6 @@
                         layout="@layout/inbox_tag_list_item"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
                         android:layout_weight="0" />
 
                     <include
@@ -133,7 +129,6 @@
                         layout="@layout/inbox_tag_list_item"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
                         android:layout_weight="0" />
 
                     <include
@@ -141,7 +136,6 @@
                         layout="@layout/inbox_tag_list_item"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
                         android:layout_weight="0" />
 
                     <include
@@ -149,31 +143,31 @@
                         layout="@layout/inbox_tag_list_item"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:layout_weight="0" />
-
-                    <include
-                        android:id="@+id/tag6"
-                        layout="@layout/inbox_tag_list_item"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right"
                         android:layout_weight="0" />
 
                     <ImageView
                         android:id="@+id/tagMore"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="end"
+                        android:layout_gravity="center_vertical"
                         android:layout_weight="0"
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp"
                         android:visibility="gone"
-                        app:srcCompat="@drawable/ic_more_horiz_black_24dp" />
+                        app:srcCompat="@drawable/ic_more_vert_black_24dp" />
 
                 </LinearLayout>
 
             </LinearLayout>
+
+            <View
+                android:id="@+id/tagDivider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="4dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/checklistEncloser" />
 
 
             <View
@@ -182,7 +176,7 @@
                 android:layout_height="1dp"
                 android:background="?android:attr/listDivider"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tagandtaskholder" />
+                app:layout_constraintTop_toBottomOf="@+id/tagOnTaskLayout" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/dateTimeInboxLayout"
