--- a/app/src/main/res/layout/inbox_tag_list_item.xml
+++ b/app/src/main/res/layout/inbox_tag_list_item.xml
@@ -2,15 +2,25 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="2dp">
 
     <ImageView
         android:id="@+id/tagImage"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_dot_black_24dp" />
+
+    <TextView
+        android:id="@+id/inbox_item_tag_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="8dp"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"
-        android:paddingTop="8dp"
-        app:srcCompat="@drawable/ic_label_black_24dp" />
+        android:layout_marginRight="8dp"
+        android:text="Tag Name"
+        app:layout_constraintBottom_toBottomOf="@+id/tagImage"
+        app:layout_constraintRight_toLeftOf="@+id/tagImage"
+        app:layout_constraintTop_toTopOf="@+id/tagImage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
